--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
         <ng-template matStepLabel>
           {{ "Record.Provide.ID.Header" | translate }}
         </ng-template>
-        <mat-form-field>
+        <mat-form-field appearance="outline">
           <mat-label translate>Record.Provide.ID.Label</mat-label>
           <input
             matInput
@@ -27,7 +27,7 @@
         </mat-form-field>
         <div>
           <button
-            mat-button
+            mat-raised-button
             matStepperNext
             color="primary"
             (click)="editable = !editable"
@@ -41,32 +41,33 @@
       <ng-template matStepLabel>
         {{ "Record.Provide.Audio.Header" | translate }}
       </ng-template>
-      <p>
+      <p class="audio-description">
         {{ "Record.Provide.Audio.Description" | translate }}
         {{ firstFormGroup.get("firstCtrl")?.value }}.
       </p>
-      <div style="text-align: center; margin-top: 200px">
-        <button
-          mat-button
-          (click)="initiateRecording()"
-          *ngIf="!recording"
-          style="cursor: pointer"
-          color="primary"
-        >
-          {{ "Record.Provide.Audio.Start" | translate }}
-        </button>
-        <button
-          mat-button
-          (click)="stopRecording()"
-          *ngIf="recording"
-          style="cursor: pointer"
-          color="warn"
-        >
-          {{ "Record.Provide.Audio.Stop" | translate }}
-        </button>
-        <audio controls="" *ngIf="url">
-          <source [src]="sanitize(url)" type="audio/wav" />
-        </audio>
+      <div class="recording-container">
+        <div class="btn-div">
+          <button
+            (click)="initiateRecording()"
+            [class.btn-initial-state]="
+              recordingTimer === null || recordingTimer === undefined
+            "
+            [class.btn-clicked]="recordingTimer !== null"
+          >
+            <svg width="24" height="24" viewBox="0 0 24 24">
+              <path
+                d="M12 15c1.66 0 2.99-1.34 2.99-3L15 6c0-1.66-1.34-3-3-3S9 4.34 9 6v6c0 1.66 1.34 3 3 3zm5.3-3c0 3-2.54 5.1-5.3 5.1S6.7 15 6.7 12H5c0 3.42 2.72 6.23 6 6.72V22h2v-3.28c3.28-.48 6-3.3 6-6.72h-1.7z"
+              />
+              <path d="M0 0h24v24H0z" fill="none" />
+            </svg>
+          </button>
+
+          <p class="recording-timer">{{ recordingTimer }}</p>
+        </div>
+
+        <ng-template [ngIf]="audioUrl">
+          <audio [src]="audioUrl" controls></audio>
+        </ng-template>
       </div>
     </mat-step>
   </mat-horizontal-stepper>
