--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,7 @@
             mat-raised-button
             matStepperNext
             color="primary"
-            (click)="editable = !editable"
+            (click)="nextStep()"
           >
             {{ "Record.NextStep" | translate }}
           </button>
@@ -46,28 +46,71 @@
         {{ firstFormGroup.get("firstCtrl")?.value }}.
       </p>
       <div class="recording-container">
-        <div class="btn-div">
-          <button
-            (click)="initiateRecording()"
-            [class.btn-initial-state]="
-              recordingTimer === null || recordingTimer === undefined
-            "
-            [class.btn-clicked]="recordingTimer !== null"
-          >
-            <svg width="24" height="24" viewBox="0 0 24 24">
-              <path
-                d="M12 15c1.66 0 2.99-1.34 2.99-3L15 6c0-1.66-1.34-3-3-3S9 4.34 9 6v6c0 1.66 1.34 3 3 3zm5.3-3c0 3-2.54 5.1-5.3 5.1S6.7 15 6.7 12H5c0 3.42 2.72 6.23 6 6.72V22h2v-3.28c3.28-.48 6-3.3 6-6.72h-1.7z"
-              />
-              <path d="M0 0h24v24H0z" fill="none" />
-            </svg>
-          </button>
+        <h3>{{ "Record.Provide.Audio.HelperText" | translate }}:</h3>
+        <mat-divider></mat-divider>
+        <mat-horizontal-stepper [linear]="isLinear" #secondStepper>
+          <mat-step *ngFor="let sentence of listOfSentences; let i = index">
+            <ng-template matStepLabel>
+              {{ "Record.Provide.Audio.Sentence" | translate }} {{ i + 1 }}
+            </ng-template>
+            <h4>{{ sentence }}</h4>
+            <div class="btn-div">
+              <button
+                (click)="initiateRecording()"
+                [class.btn-initial-state]="
+                  recordingTimer === null || recordingTimer === undefined
+                "
+                [class.btn-clicked]="recordingTimer !== null"
+              >
+                <svg width="24" height="24" viewBox="0 0 24 24">
+                  <path
+                    d="M12 15c1.66 0 2.99-1.34 2.99-3L15 6c0-1.66-1.34-3-3-3S9 4.34 9 6v6c0 1.66 1.34 3 3 3zm5.3-3c0 3-2.54 5.1-5.3 5.1S6.7 15 6.7 12H5c0 3.42 2.72 6.23 6 6.72V22h2v-3.28c3.28-.48 6-3.3 6-6.72h-1.7z"
+                  />
+                  <path d="M0 0h24v24H0z" fill="none" />
+                </svg>
+              </button>
 
-          <p class="recording-timer">{{ recordingTimer }}</p>
-        </div>
+              <p class="recording-timer">{{ recordingTimer }}</p>
+            </div>
 
-        <ng-template [ngIf]="audioUrl">
-          <audio [src]="audioUrl" controls></audio>
-        </ng-template>
+            <ng-template [ngIf]="audioUrl">
+              <audio [src]="audioUrl" controls></audio>
+            </ng-template>
+
+            <div>
+              <button
+                mat-raised-button
+                (click)="goBack()"
+                color="primary"
+                [disabled]="secondStepper.selectedIndex === 0"
+              >
+                {{ "Record.PreviousStep" | translate }}
+              </button>
+              <button
+                mat-raised-button
+                *ngIf="audioUrl"
+                (click)="goForward()"
+                color="primary"
+                [disabled]="
+                  secondStepper.selectedIndex === secondStepper.steps.length - 1
+                "
+              >
+                {{ "Record.NextStep" | translate }}
+              </button>
+            </div>
+            <mat-divider></mat-divider>
+            <button
+              mat-raised-button
+              *ngIf="
+                secondStepper.selectedIndex ===
+                  secondStepper.steps.length - 1 && audioUrl
+              "
+              (click)="closeRecord()"
+            >
+              {{ "Record.Done" | translate }}
+            </button>
+          </mat-step>
+        </mat-horizontal-stepper>
       </div>
     </mat-step>
   </mat-horizontal-stepper>
